<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_company"
        android:textStyle="bold"
        android:layout_marginTop="8dp" />

    <Spinner
        android:id="@+id/spinnerCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nickname"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nickname"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_number"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_number"
        android:inputType="text" />

    <TextView
        android:id="@+id/labelCustomerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_customer_id"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editCustomerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_customer_id"
        android:inputType="text"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save" />

</LinearLayout>
